# BrewGUI

./: .gitignore  AGENT.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  PLANS.md  roadmap.md
docs/exec-plans/active/: async-storefront.md
docs/exec-plans/completed/: async-storefront.md
docs/product-specs/: storefront.md
src/brew_gui_manager/: __init__.py  app.py  brew_service.py  main.py  task_runner.py  ui_state.py
src/brewgui/: app.py  cli.py
tests/: test_brew_service.py  test_task_runner.py
