[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brewgui"
version = "0.1.1"
description = "A Tkinter GUI for Homebrew (brew): search/install/uninstall/upgrade with a nicer info viewer."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "EchoForger"}
]
keywords = ["homebrew", "brew", "macos", "tkinter", "gui"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: System :: Installation/Setup",
]

dependencies = []

[project.scripts]
brewgui = "brewgui.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
