[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brew-gui-manager"
version = "0.1.0"
description = "A Python desktop app for managing Homebrew packages with a GUI."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "wuhaonan" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
brew-gui = "brew_gui_manager.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
